Fixed bugs where dashed underlines had a hard-coded value that should've been the letterGap variable

--- a/style.css
+++ b/style.css
@@ -213,7 +213,7 @@ div#gameDisplayArea {
 		var(--primary-color-dark),
 		var(--primary-color-dark) 1ch,
 		var(--primary-color-light) 1ch,
-		var(--primary-color-light) calc(1ch + 1rem)
+		var(--primary-color-light) calc(1ch + var(--letterGap))
 	);
 	background-position: 0 100%;
 	background-size: 100% 3px;
@@ -227,8 +227,9 @@ span.trigramSubstring {
 
 .locked > div {
 	background-color: var(--primary-color-dark);
-	border: 1px solid black;
-	box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.7);
+	/* border: 1px solid black; */
+	border-radius: 12px;
+	box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.7);
 }
 
 .locked > div.targetLengthCell {
